fixing a missing img on pampering gallery when on mobile display

--- a/menu-footer.css
+++ b/menu-footer.css
@@ -597,7 +597,6 @@
     }
     
     .PamGallery #pamper5 {
-        background-image: url(/img/pamper5.webp);
         background-position: -100px;
     }
     
